2048-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: 2048-app
  namespace: 2048-game
  labels:
    app: 2048-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: 2048-app
  template:
    metadata:
      labels:
        app: 2048-app
    spec:
      containers:
        - name: 2048-app
          image: 816008167703.dkr.ecr.us-east-1.amazonaws.com/ci-cd-repository:7
          ports:
            - containerPort: 3000
          resources:
            limits:
              cpu: "500m"
              memory: "512Mi"
            requests:
              cpu: "250m"
              memory: "256Mi"
