app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ci-cd-app
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ci-cd-app
  template:
    metadata:
      labels:
        app: ci-cd-app
    spec:
      containers:
        - name: ci-cd-app
          image: 816008167703.dkr.ecr.us-east-1.amazonaws.com/ci-cd-repository:latest
          ports:
            - containerPort: 80
