2048-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: 2048-service
  namespace: 2048-game
spec:
  selector:
    app: 2048-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: NodePort
