2048-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: 2048-ingress
  namespace: 2048-game
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}]'
spec:
  ingressClassName: alb
  rules:
    - host: 2048.wonder-hub.shop 
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: game-2048   # must match service name
                port:
                  number: 80
